Add soft delete for vehicle